# datasheet_creator

./: Cargo.toml  LICENSE  LaTeX_preamble.tex  README.md  sunsets_fury.ron  template.ron  unit_upgrade.py  upgrade_script.py
assets/: test.ron
builds/Hindlets_Datasheet_App.app/Contents/: Info.plist
builds/Hindlets_Datasheet_App.app/Contents/Resources/: Hindlets_Datasheet_App.icns
examples/: example_unit.ron  folder.rs  single_card.rs
examples/example_folder/: example_unit.ron  example_unit_2.ron
examples/folder_output/: Example Unit 2.html  Example Unit.html
examples/single_unit/: Example Unit.html
src/: helper_funcs.rs  lib.rs  main.rs  unit.rs  vals.rs  weapon.rs
src/app/: datasheet_app.rs  edit_mode.rs  edit_settings.rs  edit_unit.rs  helper.rs  layout.rs  mod.rs  pop_up_menus.rs  read_mode.rs  read_unit.rs  settings.rs  shortcuts.rs
src/data/: abilities.rs  ability.rs  crusade_data.rs  crusade_upgrade.rs  edit_data.rs  index.rs  mod.rs  unit.rs  unit_composition.rs  unit_stats.rs  variable_val.rs  wargear.rs  weapon.rs
src/data/edit_data/: edit_stats.rs  mod.rs  unit_edit_data.rs  weapon_edit_data.rs
src/export/: html.rs  latex.rs  mod.rs  pdf.rs
src/to_pdf/: mod.rs  unit.rs  weapon.rs
templates/: datasheet.html  template.html  template.tex
